# oyakodon

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: test.yml
examples/: covariant.rs
src/: bowl.rs  bowl_box.rs  bowl_mut.rs  bowl_ref.rs  helper.rs  lib.rs  stable_deref.rs
src/primitive/: aliasable.rs  bowl.rs  mod.rs  stable_deref.rs
tests/: coverage.rs  examples.rs  soundness.rs  yoke.rs
tests/self_cell/: main.rs  rust_1_85_or_newer.rs  tests_extra.rs
