[package]
name = "oyakodon"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[features]
default = ["std", "gat"]
std = ["alloc", "stable_deref_trait?/std"]
alloc = ["stable_deref_trait?/alloc"]
stable_deref = ["dep:stable_deref_trait"]
gat = []

[dependencies]
maybe-dangling = "0.1.2"
stable_deref_trait = { version = "1", default-features = false, optional = true }
