[package]
name = "oyakodon"
version = "0.1.0"
edition = "2021"
# Rust version required by sparse registry support
rust-version = "1.68"
license = "MIT OR Apache-2.0"

[features]
default = ["std", "gat"]
std = ["alloc", "stable_deref_trait?/std"]
alloc = ["stable_deref_trait?/alloc"]
stable_deref = ["dep:stable_deref_trait"]
gat = []

[dev-dependencies]
smol = "2"
rustversion = "1"

[dependencies]
maybe-dangling = "0.1.2"
stable_deref_trait = { version = "1", default-features = false, optional = true }
