[package]
name = "oyakodon"
version = "0.1.0"
description = "Correctly typed self-referential structs without unsafe code or macros"
keywords = ["self-referential", "sibling", "no_std", "lifetime", "borrowing"]
categories = [
  "rust-patterns",
  "memory-management",
  "no-std::no-alloc",
  "data-structures",
]
repository = "https://github.com/sshockwave/oyakodon"
documentation = "https://docs.rs/oyakodon"
edition = "2021"
# Rust version required by sparse registry support
rust-version = "1.68"
license = "MIT OR Apache-2.0"

[features]
default = ["std"]
std = ["alloc", "stable_deref_trait?/std"]
alloc = ["stable_deref_trait?/alloc", "dep:aliasable"]
stable_deref = ["dep:stable_deref_trait"]

[dev-dependencies]
smol = "2"
rustversion = "1"

[dependencies]
aliasable = { version = "0.1", optional = true }
maybe-dangling = "0.1"
stable_deref_trait = { version = "1.1", default-features = false, optional = true }
